<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HOXChess</string>
    <string name="ai_label">AI</string>
    <string name="you_label">You</string>
    <string name="action_settings">Settings</string>
    <string name="action_reverse_view">Reverse View</string>
    <string name="action_new">New Table</string>
    <string name="action_close">Close Table</string>
    <string name="action_draw">Offer Draw</string>
    <string name="action_resign">Offer Resign</string>
    <string name="action_reset">Reset Table</string>
    <string name="action_play_online">Play Online</string>
    <string name="action_logout">Logout</string>
    <string name="board_alt">Board</string>
    <string name="title_activity_tables">Tables</string>
    <string name="title_activity_chat">Chat</string>

    <string-array name="AILevel_entries">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>
    </string-array>

    <string-array name="AILevel_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="AILevel_default">1</string>

    <string name="ai_level">AI Level</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_difficult">Difficult</string>
    <string name="ai_label_easy">AI (Easy)</string>
    <string name="ai_label_medium">AI (Medium)</string>
    <string name="ai_label_difficult">AI (Difficult)</string>

    <string name="playxiangqi_account">PlayXiangqi Account</string>
    <string name="playxiangqi_login_with_account">Login with Account</string>
    <string name="playxiangqi_username">Username</string>
    <string name="playxiangqi_password">Password</string>
    <string name="password_masked_value">*****</string>
    <string name="playxiangqi_website">Visit: <a href="http://www.playxiangqi.com/index.php?page=register">PlayXiangqi.com</a></string>
    <string name="login_error_wrong_username">Username is wrong</string>
    <string name="login_error_wrong_password">Password is wrong</string>
    <string name="login_error_general_error">Failed to login</string>

    <string name="msg_connection_established">Connection established</string>
    <string name="msg_connection_disconnected">Connection disconnected</string>

    <string name="replay_prev">Prev</string>
    <string name="replay_next">Next</string>

    <string name="game_over_text">Game Over</string>
    <string name="replay_text">Replay %1$d / %2$d</string>

    <string name="button_play_black">Play BLACK</string>
    <string name="button_play_red">Play RED</string>

    <string name="label_game_time_zero">00:00</string>
    <string name="label_move_time_zero">0:00</string>

    <string name="title_table">#%1$s</string>
    <string name="notifications">Show Notifications</string>
    <string name="chat_button_send">Send</string>
    <string name="chat_empty_text">No message</string>

    <string name="about_title">About</string>
    <string name="version">Version 1.2</string>
    <string name="copyright">Copyright \u00A9 2016 PlayXiangqi</string>
    
    <string name="about_html">
<![CDATA[
<body>
<h3>HOXChess by PlayXiangqi</h3>
<div>
  <b>HOXChess by PlayXiangqi</b> is an open source XiangQi application for iOS and Android devices,
  hosted on <a href="https://github.com/huygithub/hoxChess">https://github.com/huygithub/hoxChess</a>.
  <p>Please contact us at <a href="mailto:hoxchess@playxiangqi.com">hoxchess@PlayXiangqi.com</a></p>
</div>

<h3>Acknowledgement</h3>
<div>
  <p><b>HaQiKi D</b> is an AI engine written by H.G. Muller at
     <a href="http://home.hccnet.nl/h.g.muller/XQhaqikid.html">http://home.hccnet.nl/h.g.muller</a></p>
</div>
</body>
]]>
    </string>
    <string name="msg_connection_failed_unresolved_address_exception">Failed to connect to the game server (UnresolvedAddressException)!</string>
    <string name="msg_network_error_io_exception_exception">IOException exception while handling network messages!</string>
    <!--<string name="msg_get_list_tables">Get list of tables...</string>-->
    <string name="msg_player_offered_draw">%1$s offered to DRAW the game</string>
    <string name="settings_sound_enabled_label">Sound</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="guest_account_name">Guest Account</string>
    <string name="guest_id_default">Guest</string>
    <string name="action_view_tables">Tables</string>
    <string name="action_view_players">Players</string>
    <string name="label_player_id">Player ID</string>
    <string name="label_player_rating">Rating</string>
    <string name="label_table">Table</string>
    <string name="action_join_table">Join Table</string>
    <string name="action_invite_to_play">Invite</string>
    <string name="chat_edit_text_hint">Type your comment&#8230;</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="msg_player_record">*INFO: %1$s %2$s W%3$s D%4$s L%5$s</string>
    <string name="action_get_player_info">Info</string>
    <string name="msg_player_info">%1$s (%2$s)</string>
    <string name="action_send_personal_message">Send message</string>
    <string name="title_table_ai">Table: AI</string>
    <string name="action_table_menu">Table menu</string>
    <string name="table_network_info">Table: #%1$s (%2$s)</string>
    <string name="logged_in_player_info">Logged in: %1$s (%2$s)</string>
    <string name="logged_in_as_player">Logged in: &lt;font color="#0033b5e5">%1$s (%2$s)&lt;/font></string>
    <string name="will_log_in_as_player">Username: &lt;font color="#0033b5e5">%1$s&lt;/font></string>
    <string name="action_login">Login</string>
    <string name="msg_login_success">Login success</string>
    <string name="msg_logout_done">Logout done</string>
    <string name="dialog_leave_table_confirm_message">Leave table?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_leave">Leave</string>
    <string name="button_send">Send</string>
    <string name="chat_table_title">Conversation (#%1$s)</string>
    <string name="dialog_error_table_not_found">Table #%1$s not found</string>
    <string name="dialog_private_message_title">Message to %1$s</string>
    <string name="home_text_practice_ai">Practice with AI</string>
    <string name="home_text_open_table">Open new table</string>
    <string name="home_text_join_table">Join existing tables</string>

</resources>
