<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_key_ai_level"
        android:title="@string/ai_level"
        android:summary="@string/level_easy"
        android:dialogTitle="@string/ai_level"
        android:entries="@array/AILevel_entries"
        android:entryValues="@array/AILevel_values"
        android:defaultValue="@string/AILevel_default" />

    <CheckBoxPreference
        android:key="pref_key_sound_enabled"
        android:title="@string/settings_sound_enabled_label"
        android:defaultValue="true" />

    <!-- PlayXiangqi account -->
    <PreferenceCategory 
        android:title="@string/playxiangqi_account"
        android:key="pref_key_playxiangqi_account">

        <CheckBoxPreference
            android:key="pref_key_playxiangqi_login_with_account"
            android:title="@string/playxiangqi_login_with_account"
            android:defaultValue="false" />
        
        <EditTextPreference 
            android:key="pref_key_playxiangqi_username"
            android:dependency="pref_key_playxiangqi_login_with_account"
            android:summary="@string/playxiangqi_username"
            android:title="@string/playxiangqi_username" />
        
        <EditTextPreference
            android:key="pref_key_playxiangqi_password"
            android:dependency="pref_key_playxiangqi_login_with_account"
            android:summary="@string/playxiangqi_password"
            android:title="@string/playxiangqi_password"
            android:inputType="textPassword" />
        
        <Preference android:title="@string/playxiangqi_website" >
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.playxiangqi.com" />
        </Preference>
        
    </PreferenceCategory>

    <!-- About
    <PreferenceCategory 
        android:title="@string/about_title">
        
        <Preference android:title="@string/version"
                    android:summary="@string/copyright" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.playxiangqi.hoxchess"
                android:targetClass="com.playxiangqi.hoxchess.AboutActivity" />
        </Preference>
        
    </PreferenceCategory>
    -->
</PreferenceScreen>
