<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_new_table"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          app:showAsAction="always" />

    <item android:id="@+id/action_close_table"
          android:title="@string/action_close"
          android:icon="@drawable/ic_action_close_tables"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_play_online"
          android:icon="@drawable/ic_action_tables"
          android:title="@string/action_view_tables"
          app:showAsAction="always" />
    
    <!--  Notification item -->
    <item android:id="@+id/badge"
          android:title="@string/notifications"
          app:actionLayout="@layout/msg_update_count"
          android:icon="@drawable/shape_notification"
          app:showAsAction="always">
    </item>
    <!--
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never" />
    -->
</menu>
