<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <TextView
	        android:id="@+id/top_player_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerInParent="true"
	        android:text="@string/ai_label" />
	    
        <Button
              android:id="@+id/top_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/top_player_label"
              android:text="@string/button_play_black"
              android:textSize="12sp"
              android:minHeight="0dp"
              android:onClick="onTopButtonClick" />  

        <TextView
            android:id="@+id/top_move_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"            
            android:text="@string/label_move_time_zero" />
        
        <TextView
            android:id="@+id/top_game_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/top_move_time"
            android:layout_centerInParent="true"
            android:layout_marginRight="8dp"          
            android:text="@string/label_game_time_zero" />
        
    </RelativeLayout>
    
    <com.playxiangqi.hoxchess.BoardView
        android:id="@+id/board_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/board_alt" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >
    
        <TextView
            android:id="@+id/bottom_player_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/you_label" />
        
        <Button
              android:id="@+id/bottom_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/bottom_player_label"
              android:text="@string/button_play_red"
              android:textSize="12sp"
              android:minHeight="0dp"
              android:onClick="onBottomButtonClick" />
        
        <TextView
            android:id="@+id/bottom_move_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"            
            android:text="@string/label_move_time_zero" />
        
        <TextView
            android:id="@+id/bottom_game_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/bottom_move_time"
            android:layout_centerInParent="true"
            android:layout_marginRight="8dp"          
            android:text="@string/label_game_time_zero" />
        
    </RelativeLayout>
    
    <RelativeLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
        
        <ImageButton
              android:id="@+id/replay_previous"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:contentDescription="@string/replay_prev"
              android:src="@drawable/ic_action_previous_item"
              android:onClick="onReplayPrevious"
              android:longClickable="true" />

        <ImageButton
              android:id="@+id/replay_next"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/replay_previous"
              android:contentDescription="@string/replay_next"
              android:src="@drawable/ic_action_next_item"
              android:onClick="onReplayNext"
              android:longClickable="true" />

        <ImageButton
              android:id="@+id/action_reset"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:contentDescription="@string/action_reset"
              android:src="@drawable/ic_action_rotate_right"
              android:onClick="onResetTable" />

        <ImageButton
              android:id="@+id/reverse_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toLeftOf="@id/action_reset"
              android:contentDescription="@string/action_reverse_view"
              android:src="@drawable/ic_action_shuffle"
              android:onClick="onReverseView" />
        
    </RelativeLayout>
    
</LinearLayout>
