<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/bottom_sheet_horizontal_margin"
    android:paddingRight="@dimen/bottom_sheet_horizontal_margin">

    <TextView
        android:id="@+id/sheet_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <!-- Line separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff5f5f5"/>

    <LinearLayout
        android:id="@+id/sheet_close_table_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- TODO: Need to tint the drawable to make it darker until we replace the icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/ic_action_close_tables"
            android:tint="@color/menu_button_material_dark"
            android:contentDescription="@string/action_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_close"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_reset_table_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/reset_table_icon"
            android:contentDescription="@string/action_reset" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_reset"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_reverse_table_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/reverse_table_view_blue"
            android:contentDescription="@string/action_reverse_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_reverse_view"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_offer_draw_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/offer_draw_icon"
            android:contentDescription="@string/action_draw" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_draw"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_offer_resign_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/offer_resign_icon"
            android:contentDescription="@string/action_resign" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_resign"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_new_table_view"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- TODO: Need to tint the drawable to make it darker until we replace the icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bottom_sheet_horizontal_margin"
            android:src="@drawable/ic_action_new"
            android:contentDescription="@string/action_new"
            android:tint="@color/menu_button_material_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_new"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>