<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/list_horizontal_padding"
    android:paddingRight="@dimen/list_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- List header -->
    <RelativeLayout
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/player_list_view_header_height">

        <TextView
            android:id="@+id/player_id"
            android:layout_width="@dimen/player_item_player_id_text_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dip"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/table_item_table_id_color"
            android:textStyle="bold"
            android:text="@string/label_player_id" />

        <TextView
            android:id="@+id/player_rating"
            android:layout_width="@dimen/player_item_player_rating_text_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/player_id"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/label_player_rating" />

        <TextView
            android:id="@+id/table_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/player_rating"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/label_table" />

    </RelativeLayout>

    <!-- List separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_material_light"/>

    <!-- Loading view (in empty/initial state) -->
    <LinearLayout
        android:id="@+id/inProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>

    <!-- List view -->
    <ListView
        android:id="@+id/list_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>

</LinearLayout>
