<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sheet_player_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hoxchess (1500)"
        android:background="@drawable/side_nav_bar"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/sheet_send_private_message"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bottom_sheet_horizontal_margin"
        android:layout_marginRight="@dimen/bottom_sheet_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send_personal_message"
            android:padding="16dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_invite_to_play"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bottom_sheet_horizontal_margin"
        android:layout_marginRight="@dimen/bottom_sheet_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_outline_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_invite_to_play"
            android:padding="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_join_table_of_player"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bottom_sheet_horizontal_margin"
        android:layout_marginRight="@dimen/bottom_sheet_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_face_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_join_table"
            android:padding="16dp"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>